Correcciones al SPRINT 5 e integración con el SPRINT 6 de Jhony.
Hice:
- El campo número de acta en todos los formato debe ser Alfanumérico.
- Para todos los roles se debe ubicar automáticamente el trabajo de grado en la fase en la que va.

PD: Renombre los facelets de las fases, con el fin de no ligar el nombre de las vistas al nombre de las fases ya que si la app va a ser dinamica, esto no conviene. Tambien corregi un par de cosas que faltaban y estaban mal.

PD: Quite por ahora del flujo el formato G, ya que este va en la fase 5 ... y vamos en la fase 4.

--- a/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
+++ b/web/coordinador/asignar-evaluadores-anteproyecto.xhtml
@@ -27,8 +27,8 @@
                     <p:menuitem value="Inicio" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
                     <p:menuitem value="Coordinador" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />                      
                     <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
-                    <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-evaluacion-anteproyecto" />
-                    <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fase-evaluacion-anteproyecto" />
+                    <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-3" />
+                    <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fase-3" />
                     <p:menuitem value="Asignación de evaluadores" />
                 </p:breadCrumb>              
                 </h:form>
@@ -136,7 +136,7 @@
                             <br />
                             <h:panelGrid  columns="2" style="margin: 0 auto;" cellpadding="5">
                                 <p:commandButton value="Guardar"  action="#{anteproyecto.guardarevaluadores()}" icon="ui-icon-disk" style="font-size: 13px; width: 120px;" update="growl"/>
-                                <p:button value="Cancelar" outcome="fase-evaluacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Cancelar" outcome="fase-3" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid> 
                         </p:panel>
                     </h:form>
