--- a/web/coordinador/editar-formato-D.xhtml
+++ b/web/coordinador/editar-formato-D.xhtml
@@ -187,7 +187,7 @@
                                         </p:fieldset>
 
                                     </h:panelGrid>
-                                    <p:commandButton value="Guardar" update="growl" action="#{formatoD.btnGuardar()}" icon="ui-icon-disk" style="display: block; margin: 0 auto;" />
+                                    <p:commandButton value="Editar" update="growl" action="#{formatoD.btnEditar()}" icon="ui-icon-pencil" style="display: block; margin: 0 auto;" />
                                 </p:panel>
                             </p:tab>
                         </p:wizard>
