--- a/web/estudiante/fase-2.xhtml
+++ b/web/estudiante/fase-2.xhtml
@@ -2,8 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
     <body>
@@ -13,25 +13,31 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-evaluador.xhtml" />
-                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-evaluador.xhtml" />
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-realizacion-anteproyecto" />
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                    
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-2" />
                         <p:menuitem value="2. Realización del Anteproyecto" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
 
-            <ui:define name="title">
+            <ui:define name="title">                                
             </ui:define>
 
             <ui:define name="body">
+
+                #{estudianteViewController.nombresApellidos(serviciosSimcaController.nombreUsuario)}
+                #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
+                #{trabajodegradoController.incializar()}                
+                #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
+                
                 <h:form>                                                           
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
                             #{trabajodegradoController.trabajo.trabajonombre}
-                        </div>                                         
+                        </div>
                         <p:growl id="growl" showDetail="true" life="5000"/>
                         <p:spacer height="25"/>
                         <p:panel id="fasesTrabajoGrado" header="Fases del Trabajo de Grado">
@@ -43,7 +49,7 @@
                                 <p:graphicImage value="../resources/img/5.png" style="width: 96px;" />
                                 <p:graphicImage value="../resources/img/6.png" style="width: 96px;" />                        
 
-                                <p:button value="Presentación de la Idea" outcome="fase-presentacion-de-la-idea" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
+                                <p:button value="Presentación de la Idea" outcome="./../perfiles/vista-estudiante.xhtml" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
 
                                 <p:commandButton type="button" value="Realización del Anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" >
                                     <p:effect type="highlight" event="click" for="pnlRealizacionAnteproyecto">
@@ -51,19 +57,20 @@
                                     </p:effect>
                                 </p:commandButton>
 
-                                <p:button value="Evaluación del Anteproyecto" outcome="fase-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Ejecución del Trabajo de Grado" outcome="fase-ejecucion-del-trabajo-de-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Evaluación del Anteproyecto" outcome="fase-3" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>
                         </p:panel>      
                         <p:spacer height="25"/>
                         <p:panel id="pnlRealizacionAnteproyecto" header="2. Realización del Anteproyecto" style=" font-size: 14px;" widgetVar="pnlRealizacionAnteproyecto">
-                            <h:panelGrid columns="5" cellpadding="5" cellspacing="5">
-                                <h:outputText value="Anteproyecto:" style="font-weight: bold;" />                                                                
-                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-anteproyecto.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 120px;" />
-                                <p:commandButton id="btndesc" value="Descargar" rendered="#{anteproyecto.filedown != null}"
-                                                 ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
+                            <h:panelGrid columns="4" cellpadding="5" cellspacing="5">
+                                <h:outputText value="Anteproyecto:" style="font-weight: bold;" />                                
+                                <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnDiligenciarAnteproyecto}" style="width: 120px;" rendered="#{!trabajodegradoController.btnDiligenciarAnteproyecto}" />
+                                <p:button value="Editar" icon="ui-icon-comment" href="editar-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnEditarAnteproyecto}" style="width: 120px;" rendered="#{!trabajodegradoController.btnEditarAnteproyecto}" />
+                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 120px;" />
+                                <p:commandButton id="btndesc" value="Descargar" ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" disabled="#{trabajodegradoController.btnVerAnteproyecto}" 
                                                  icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
                                     <p:fileDownload value="#{anteproyecto.filedown}" />
                                 </p:commandButton>
@@ -72,6 +79,8 @@
                     </p:panel>
                 </h:form>
             </ui:define>
+
         </ui:composition>
+
     </body>
 </html>
