--- a/web/perfiles/vista-secretaria-general.xhtml
+++ b/web/perfiles/vista-secretaria-general.xhtml
@@ -55,6 +55,7 @@
                                     <f:attribute name="iddirector" value="#{car.directorId}" />
                                     <f:attribute name="est1" value="#{car.est1Id}" />
                                     <f:attribute name="est2" value="#{car.est2Id}" />
+                                    <f:attribute name="fase" value="#{car.estado}" />
                                 </p:commandLink>             
                             </p:column>
                             <p:column style="width: 140px;" headerText="Director">
