--- a/web/vistas-documentos/ver-anteproyecto.xhtml
+++ b/web/vistas-documentos/ver-anteproyecto.xhtml
@@ -30,7 +30,7 @@
                         <p:menuitem value="#{menuController.rolActual}" />
                         <p:menuitem value="Trabajos de Grado" />
                         <p:menuitem value="Fases del Trabajo de Grado" />
-                        <p:menuitem value="2. Realizacion del Anteproyecto" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-realizacion-anteproyecto" />
+                        <p:menuitem value="2. Realizacion del Anteproyecto" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-2" />
                         <p:menuitem value="Ver Anteproyecto" outcome="ver-anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
@@ -89,7 +89,7 @@
                             </h:panelGrid>
                             <br />
                             <h:panelGrid style="margin: 0 auto;">  
-                                <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-realizacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-2" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid> 
                         </p:panel>
                     </h:form>
