--- a/web/vistas-documentos/ver-formato-D.xhtml
+++ b/web/vistas-documentos/ver-formato-D.xhtml
@@ -18,7 +18,7 @@
                         <p:menuitem value="#{menuController.rolActual}" />
                         <p:menuitem value="Trabajos de Grado" />
                         <p:menuitem value="Fases del Trabajo de Grado" />
-                        <p:menuitem value="3. Evaluacion del Anteproyecto" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-evaluacion-anteproyecto" />
+                        <p:menuitem value="3. Evaluacion del Anteproyecto" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-3" />
                         <p:menuitem value="Ver Formato D" outcome="ver-formato-D" />
                     </p:breadCrumb>
                 </h:form>
@@ -106,7 +106,7 @@
                             </h:panelGrid>
                             <br />
                             <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-evaluacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />                               
+                                <p:button value="Volver" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-3" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />                               
                                 <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px; width: 120px;" />
                             </h:panelGrid>
                         </p:panel>
