--- a/web/director/editar-formato-A.xhtml
+++ b/web/director/editar-formato-A.xhtml
@@ -16,15 +16,14 @@
                         <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
                         <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
                         <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-director.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-presentacion-de-la-idea" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-presentacion-de-la-idea" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-1" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-1" />
                         <p:menuitem value="Editar Formato A" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
 
             <ui:define name="title">
-                title
             </ui:define>
 
             <ui:define name="body">
@@ -126,6 +125,10 @@
                                             <p:outputLabel value="meses." />
                                         </p:column>
                                         <p:separator style="border-color: white !important;" />
+                                        
+                                        <p:outputLabel styleClass="subtitulosFormato" value="Condiciones de entrega: *"> </p:outputLabel>
+                                        <p:inputTextarea value="#{formatoA.condiciones}" required="true" label="Condiciones entrega" styleClass="txtareaform" requiredMessage="Debe ingresar las condiciones de entrega para desarrollar su trabajo de grado."/>
+                                        <p:separator style="border-color: white !important;" />
                                     </h:panelGrid>
                                 </p:panel>
                             </p:tab>
@@ -187,6 +190,10 @@
                                         <p:fieldset legend="Tiempo estimado de realización" toggleable="true" styleClass="txtareaform"> 
                                             <p:outputLabel value="#{formatoA.tiempo} meses"> </p:outputLabel>
                                         </p:fieldset>
+                                        
+                                        <p:fieldset legend="Condiciones de entrega" toggleable="true" styleClass="txtareaform"> 
+                                            <p:outputLabel value="#{formatoA.condiciones}"> </p:outputLabel>
+                                        </p:fieldset>
 
                                         <p:fieldset legend="Recursos requeridos" toggleable="true" styleClass="txtareaform"> 
                                             <p:outputLabel value="#{formatoA.recursos}"> </p:outputLabel>
@@ -210,7 +217,7 @@
                                 </p:panel>
                             </p:tab>
                         </p:wizard>
-                        <p:button value="Cancelar" outcome="fase-presentacion-de-la-idea" style="margin-top: 20px; display: block; margin: 0 auto; font-size: 14px;" icon="ui-icon-cancel" />
+                        <p:button value="Cancelar" outcome="fase-1" style="margin-top: 20px; display: block; margin: 0 auto; font-size: 14px;" icon="ui-icon-cancel" />
                     </h:form>         
                 </p:panel>
 
