--- a/web/director/fase-2.xhtml
+++ b/web/director/fase-2.xhtml
@@ -13,27 +13,27 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
-                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                    
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-realizacion-anteproyecto" />
-                        <p:menuitem value="2. Realización del Anteproyecto" />
+                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-director.xhtml" />
+                        <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-director.xhtml" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-2" />
+                        <p:menuitem value="2. Realizacion del Anteproyecto" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
 
-            <ui:define name="title">                                
+            <ui:define name="title">
             </ui:define>
 
             <ui:define name="body">
-
-                #{menuController.setOutPerfiles(true)}
                 
-                <h:form>                                                           
+                #{menuController.setOutPerfiles(true)}
+
+                <h:form id="formularioavalar">
                     <p:panel styleClass="paneltrabajo" >
-                        <div class="tituloContenido">                        
+                        <div class="tituloContenido">
                             #{trabajodegradoController.trabajo.trabajonombre}
-                        </div>
+                        </div>                                         
                         <p:growl id="growl" showDetail="true" life="5000"/>
                         <p:spacer height="25"/>
                         <p:panel id="fasesTrabajoGrado" header="Fases del Trabajo de Grado">
@@ -45,7 +45,7 @@
                                 <p:graphicImage value="../resources/img/5.png" style="width: 96px;" />
                                 <p:graphicImage value="../resources/img/6.png" style="width: 96px;" />                        
 
-                                <p:button value="Presentación de la Idea" outcome="./../perfiles/vista-estudiante.xhtml" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
+                                <p:button value="Presentación de la Idea" outcome="fase-1" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
 
                                 <p:commandButton type="button" value="Realización del Anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" >
                                     <p:effect type="highlight" event="click" for="pnlRealizacionAnteproyecto">
@@ -53,8 +53,8 @@
                                     </p:effect>
                                 </p:commandButton>
 
-                                <p:button value="Evaluación del Anteproyecto" outcome="fase-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Ejecución del Trabajo de Grado" outcome="fase-ejecucion-del-trabajo-de-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Evaluación del Anteproyecto" outcome="fase-3" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>
@@ -62,22 +62,30 @@
                         <p:spacer height="25"/>
                         <p:panel id="pnlRealizacionAnteproyecto" header="2. Realización del Anteproyecto" style=" font-size: 14px;" widgetVar="pnlRealizacionAnteproyecto">
                             <h:panelGrid columns="5" cellpadding="5" cellspacing="5">
-                                <h:outputText value="Anteproyecto:" style="font-weight: bold;" />                                
-                                <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnDiligenciarAnteproyecto}" style="width: 120px;" />
-                                <p:button value="Editar" icon="ui-icon-comment" href="editar-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnEditarAnteproyecto}" style="width: 120px;" />
+                                <h:outputText value="Anteproyecto:" style="font-weight: bold;" />                                                                
+                                <p:button value="Editar" icon="ui-icon-pencil" href="editar-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnEditarAnteproyecto}" style="width: 120px;" />
                                 <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-anteproyecto.xhtml" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 120px;" />
                                 <p:commandButton id="btndesc" value="Descargar" rendered="#{anteproyecto.filedown != null}"
                                                  ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
                                                  icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
                                     <p:fileDownload value="#{anteproyecto.filedown}" />
                                 </p:commandButton>
+                                <p:commandButton id="btnAval" value="Avalar" icon="ui-icon-check" disabled="#{trabajodegradoController.btnEditarAnteproyecto}" onclick="PF('Avalar').show()" style="width: 120px;" />
                             </h:panelGrid>
                         </p:panel>
                     </p:panel>
+
+                    <p:dialog header="Confirmación" showEffect="scale" modal="true"  widgetVar="Avalar" resizable="false">
+                        <br />
+                        <p:outputLabel value="¿Desea avalar dicho anteproyecto?"/>
+                        <br /><br />
+                        <h:panelGrid columns="2" cellspacing="10" cellpadding="10" style="margin: 0 auto">
+                            <p:commandButton id="btnAceptar" value="Si" icon="ui-icon-check" action="#{trabajogradoFaseController.btnAvalar(trabajodegradoController)}"/>
+                            <p:commandButton id="btnCancelar" value="No" icon="ui-icon-cancel" onclick="PF('Avalar').hide()"/>
+                        </h:panelGrid>
+                    </p:dialog>
                 </h:form>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
