--- a/web/estudiante/diligenciar-anteproyecto.xhtml
+++ b/web/estudiante/diligenciar-anteproyecto.xhtml
@@ -16,7 +16,7 @@
                         <p:menuitem value="Inicio" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
                         <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />
                         <p:menuitem value="Fases del Trabajo de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />
-                        <p:menuitem value="2. Realización del Anteproyecto" outcome="fase-realizacion-anteproyecto" />
+                        <p:menuitem value="2. Realización del Anteproyecto" outcome="fase-2" />
                         <p:menuitem value="Diligenciar Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
@@ -52,12 +52,12 @@
                                 <p:outputLabel styleClass="subtitulosFormato" value="Director del trabajo de grado: *" />
                                 <p:outputLabel value="#{anteproyecto.directortg}" />
                                 <p:outputLabel styleClass="subtitulosFormato" value="Objetivos: *" />
-                                <p:inputTextarea cols="40" rows="3" value="#{anteproyecto.objetivos}" required="true" validatorMessage="Debe ingresar los objetivos." style="display: block; margin: 0 auto;" />
+                                <p:inputTextarea cols="60" rows="4" value="#{anteproyecto.objetivos}" required="true" validatorMessage="Debe ingresar los objetivos." style="display: block; margin: 0 auto;" />
                                 <p:outputLabel styleClass="subtitulosFormato" value="Adjuntar anteproyecto: *" />
                                 <p:column>
-                                    <p:fileUpload required="true" fileUploadListener="#{anteproyecto.handleFileUpload}" auto="true" style="width: 135px;" 
-                                                  allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Examinar..." update="nombarch"
-                                                  invalidFileMessage="Tipo de Archivo no Valido, Agregue un archivo word o pdf" 
+                                    <p:fileUpload required="true" fileUploadListener="#{anteproyecto.handleFileUpload}"
+                                                  allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Examinar..." mode="advanced" uploadLabel="Actualizar" cancelLabel="Cancelar" multiple="false"
+                                                  invalidFileMessage="Tipo de Archivo no Valido, Agregue un archivo word o pdf"  update="nombarch"
                                                   invalidSizeMessage="El archivo excede le tamaño permitido(30MG)" validatorMessage="Debe adjuntar su documento de anteproyecto." />
                                     <p:outputLabel style="display: block; margin: 0 auto;" id="nombarch" value="#{anteproyecto.nombarch}"/>
                                 </p:column>
@@ -65,7 +65,7 @@
                             <p:spacer height="10"/>
                             <h:panelGrid style="margin: 0 auto;" columns="2" cellpadding="13">
                                 <p:commandButton update="growl" value="Guardar" action="#{anteproyecto.guardar()}" icon="ui-icon-disk" style="font-size: 13px; width: 120px;" />
-                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="fase-realizacion-anteproyecto" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="fase-2" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
