--- a/web/estudiante/editar-anteproyecto.xhtml
+++ b/web/estudiante/editar-anteproyecto.xhtml
@@ -29,7 +29,7 @@
                         <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
                         <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />
                         <p:menuitem value="Fases del Trabajo de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />
-                        <p:menuitem value="2. Realización del Anteproyecto" outcome="fase-realizacion-anteproyecto" />
+                        <p:menuitem value="2. Realización del Anteproyecto" outcome="fase-2" />
                         <p:menuitem value="Editar Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
@@ -63,11 +63,11 @@
                                 <p:outputLabel styleClass="subtitulosFormato" value="Director del trabajo de grado: *" />
                                 <p:outputLabel value="#{anteproyecto.directortg}" />
                                 <p:outputLabel styleClass="subtitulosFormato" value="Objetivos: *" />
-                                <p:inputTextarea cols="50" rows="3" value="#{anteproyecto.objetivos}" required="true" validatorMessage="Debe ingresar los objetivos." style="display: block; margin: 0 auto;" />
+                                <p:inputTextarea cols="60" rows="3" value="#{anteproyecto.objetivos}" required="true" validatorMessage="Debe ingresar los objetivos." style="display: block; margin: 0 auto;" />
                                 <p:outputLabel styleClass="subtitulosFormato" value="Adjuntar anteproyecto: *" />
                                 <p:column>    
-                                    <p:fileUpload required="true" fileUploadListener="#{anteproyecto.handleFileUpload}" auto="true"
-                                                allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Examinar" update="nombarch"
+                                    <p:fileUpload required="true" fileUploadListener="#{anteproyecto.handleFileUpload}" mode="advanced" uploadLabel="Actualizar" cancelLabel="Cancelar" multiple="false"
+                                                allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Examinar..." update="nombarch"
                                                 invalidFileMessage="Tipo de Archivo no Valido, Agregue un archivo word o pdf" 
                                                 invalidSizeMessage="El archivo excede le tamaño permitido(30MG)" 
                                                   />
@@ -76,13 +76,13 @@
                             </h:panelGrid>
                             <p:spacer height="10"/>
                             <h:panelGrid style="margin: 0 auto;" columns="3" cellpadding="13">
-                                <p:commandButton value="Editar" update="growl" actionListener="#{anteproyecto.editar()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
+                                <p:commandButton value="Editar" update="growl" action="#{anteproyecto.editar()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
                                 <p:commandButton id="btndesc" style="font-size: 13px; width: 160px;" value="Descargar archivo" rendered="#{anteproyecto.filedown != null}"
                                                 ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
                                                 icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
                                     <p:fileDownload value="#{anteproyecto.filedown}" />
                                 </p:commandButton>
-                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="fase-realizacion-anteproyecto" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="fase-2" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
