--- a/web/jefe-de-departamento/diligenciar-formato-revision-idea.xhtml
+++ b/web/jefe-de-departamento/diligenciar-formato-revision-idea.xhtml
@@ -16,8 +16,8 @@
                         <p:menuitem value="Inicio" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />                                        
                         <p:menuitem value="Jefe de Departamento" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />
                         <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-presentacion-de-la-idea" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-presentacion-de-la-idea" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-1" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-1" />
                         <p:menuitem value="Diligenciar Revisión de la idea" />
                     </p:breadCrumb>              
                 </h:form>
@@ -42,9 +42,7 @@
                             <h:panelGrid style="margin: 0 auto;" columns="2" cellpadding="15" >
 
                                 <p:outputLabel styleClass="subtitulosFormato" value="Número de acta de la reunión: *" />
-                                <p:inputText value="#{revisionIdeaController.numActa}" required="true" label="Numero de acta" validatorMessage="Este número de acta ya existe." size="4" requiredMessage="Debe ingresar el número de acta.">
-                                    <f:convertNumber integerOnly="true" type="number" />
-                                </p:inputText >
+                                <p:inputText value="#{revisionIdeaController.numActa}" required="true" label="Numero de acta" size="4" requiredMessage="Debe ingresar el número de acta." />
 
                                 <p:outputLabel styleClass="subtitulosFormato" value="Titulo del trabajo de grado: *" />
                                 <p:outputLabel value="#{revisionIdeaController.nombretg}" style="font-weight: bold;" />
@@ -65,12 +63,12 @@
                                     <f:selectItem itemLabel="No aprobado" itemValue="0" />
                                 </p:selectOneRadio>
                                 <p:outputLabel styleClass="subtitulosFormato" value="Observaciones:" />
-                                <p:inputTextarea cols="40" rows="3" value="#{revisionIdeaController.observaciones}"/>
+                                <p:inputTextarea cols="60" rows="3" value="#{revisionIdeaController.observaciones}"/>
                             </h:panelGrid>
 
                             <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="8">
                                 <p:commandButton update="growl" value="Guardar" action="#{revisionIdeaController.guardar()}" icon="ui-icon-disk"/>
-                                <p:button value="Cancelar"  icon="ui-icon-cancel" outcome="fase-presentacion-de-la-idea"/>
+                                <p:button value="Cancelar"  icon="ui-icon-cancel" outcome="fase-1"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
