--- a/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
+++ b/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
@@ -16,8 +16,8 @@
                         <p:menuitem value="Inicio" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />                                        
                         <p:menuitem value="Jefe de Departamento" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />
                         <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-presentacion-de-la-idea" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-presentacion-de-la-idea" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-1" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="fase-1" />
                         <p:menuitem value="Editar Revisión de la idea" />
                     </p:breadCrumb>              
                 </h:form>
@@ -65,12 +65,12 @@
                                     <f:selectItem itemLabel="No aprobado" itemValue="0" />
                                 </p:selectOneRadio>
                                 <p:outputLabel styleClass="subtitulosFormato" value="Observaciones:" />
-                                <p:inputTextarea cols="25" rows="3" value="#{revisionIdeaController.observaciones}"/>
+                                <p:inputTextarea cols="60" rows="3" value="#{revisionIdeaController.observaciones}"/>
                             </h:panelGrid>
                             
                             <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="8">
                                 <p:commandButton update="growl" value="Editar" action="#{revisionIdeaController.editar()}" icon="ui-icon-pencil"/>
-                                <p:button value="Cancelar"  icon="ui-icon-cancel" outcome="fase-presentacion-de-la-idea"/>
+                                <p:button value="Cancelar"  icon="ui-icon-cancel" outcome="fase-1"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
