--- a/web/perfiles/vista-director.xhtml
+++ b/web/perfiles/vista-director.xhtml
@@ -24,7 +24,6 @@
             </ui:define>
 
             <ui:define name="body">
-                
                 <p:dialog showEffect="fade" hideEffect="explode" position="center" widgetVar="agregartest" header="Crear nuevo Trabajo de Grado" modal="true" resizable="false" >
                     <h:form>
                         <h:panelGrid columns="2" cellpadding="10">
@@ -66,13 +65,14 @@
                                     <f:attribute name="nombretrab" value="#{car.trabajoGrado}" />
                                     <f:attribute name="est1" value="#{car.est1Id}" />
                                     <f:attribute name="est2" value="#{car.est2Id}" />
+                                    <f:attribute name="fase" value="#{car.estado}" />
                                 </p:commandLink>
                             </p:column>
                             <p:column style="width: 150px;" headerText="Estudiantes" > <!--filterBy="{car.est1 or car.est2}"-->
                                 #{car.est1} <br /> #{car.est2}      
                             </p:column>
                             <p:column headerText="Fase" style="text-align: center">
-                                <h:outputText style="text-align: center;" value="#{car.estado}" />   
+                                <h:outputText style="text-align: center;" value="#{car.estado.fasenombre}" />   
                             </p:column>        
                         </p:dataTable>                        
                     </p:panel>
