--- a/web/perfiles/vista-estudiante.xhtml
+++ b/web/perfiles/vista-estudiante.xhtml
@@ -12,13 +12,15 @@
         <ui:composition template="./../plantillas/plantilla.xhtml">
 
             <ui:define name="menuprincipal">
-                <p:breadCrumb styleClass="migaDePan">
-                    <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
-                    <p:menuitem value="Estudiante" outcome="vista-estudiante" />                    
-                    <p:menuitem value="Trabajo de Grado" outcome="vista-estudiante" />                        
-                    <p:menuitem value="Fases del Trabajo de Grado" outcome="vista-estudiante" />
-                    <p:menuitem value="1. Presentación de la Idea" outcome="vista-estudiante" />
-                </p:breadCrumb>
+                <h:form>
+                    <p:breadCrumb styleClass="migaDePan">
+                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
+                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />                    
+                        <p:menuitem value="Trabajo de Grado" outcome="vista-estudiante" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="vista-estudiante" />
+                        <p:menuitem value="1. Presentación de la Idea" />
+                    </p:breadCrumb>
+                </h:form>
             </ui:define>
 
             <ui:define name="title">                                
@@ -54,9 +56,9 @@
                                         </p:effect>
                                     </p:commandButton>
 
-                                    <p:button value="Realización del Anteproyecto" outcome="../estudiante/fase-realizacion-anteproyecto.xhtml" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
-                                    <p:button value="Evaluación del Anteproyecto" outcome="../estudiante/fase-evaluacion-anteproyecto.xhtml" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                    <p:button value="Ejecución del Trabajo de Grado" href="../estudiante/fase-ejecucion-del-trabajo-de-grado.xhtml" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                    <p:button value="Realización del Anteproyecto" outcome="../estudiante/fase-2.xhtml" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
+                                    <p:button value="Evaluación del Anteproyecto" outcome="../estudiante/fase-3.xhtml" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                    <p:button value="Ejecución del Trabajo de Grado" href="../estudiante/fase-4.xhtml" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                     <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                     <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 </h:panelGrid>
@@ -79,10 +81,12 @@
                 <p:panel styleClass="paneltrabajo" rendered="#{!estudianteViewController.estTieneTG(serviciosSimcaController.nombreUsuario)}">
                     <div class="tituloContenido">                        
                         Lo sentimos, aun no tiene un trabajo de grado asignado.
-                        <br /> <br /> <br />
-                        Modalidad de Trabajo de Grado: Trabajo de Investigación
-                        <ui:include src="./../procedimiento.xhtml"/> 
                     </div>
+                    <br /> <br />
+                    <h:panelGrid style="margin: 0 auto;">
+                        <h:outputText value="Modalidad de Trabajo de Grado: Trabajo de Investigación" style="font-weight: bold;" /> 
+                    </h:panelGrid>
+                    <ui:include src="./../procedimiento.xhtml"/> 
                 </p:panel>
                 <h:form id="frmDescargarFormatoA">
                     <p:dialog id="dlgVerRutina" header="Descargar Formato A" widgetVar="dlgVerRutina" modal="true" position="top" resizable="false">                            
