--- a/web/perfiles/vista-jefe-de-departamento.xhtml
+++ b/web/perfiles/vista-jefe-de-departamento.xhtml
@@ -52,6 +52,7 @@
                                     <f:attribute name="iddirector" value="#{car.directorId}" />
                                     <f:attribute name="est1" value="#{car.est1Id}" />
                                     <f:attribute name="est2" value="#{car.est2Id}" />
+                                    <f:attribute name="fase" value="#{car.estado}" />
                                 </p:commandLink>
                             </p:column>
                             <p:column rendered="#{!jefeDepController.modo}" style="width: 140px;" headerText="Director">
